# mimirsbrunn

./: Cargo.toml
config/: bragi-settings.toml  poi_settings.json
config/index_templates/: addr_template.json  admin_template.json  default_settings.json  poi_template.json  stop_template.json  street_template.json
libs/bragi/: Cargo.toml
libs/bragi/src/: extractors.rs  lib.rs  model.rs  prometheus_middleware.rs  query.rs  server.rs  utils.rs
libs/bragi/src/routes/: autocomplete.rs  entry_point.rs  features.rs  reverse.rs  status.rs
libs/mimir/: Cargo.toml
libs/mimir/src/: objects.rs  rubber.rs
src/: addr_reader.rs  admin_geofinder.rs  stops.rs
src/osm_reader/: admin.rs  osm_store.rs  poi.rs  street.rs
tests/: bano2mimir_test.rs  bragi_poi_test.rs  osm2mimir_test.rs
tests/fixtures/: osm_fixture.osm  osm_fixture.osm.pbf  sample-bano.csv
