[package]
name = "bragi"
version = "1.15.0"
authors = ["dt.ro <dt.ro@canaltp.fr>"]
edition = "2018"

[dependencies]
structopt = "0.3"
slog = { version = "2.4", features = ["max_level_trace", "release_max_level_info"]}
slog-scope = "4.1"
rs-es = { git = "https://github.com/canaltp/rs-es", features = ["geo"]}
serde = { version = "1", features = ["rc"]}
serde_json = "1"
geojson = { version = "0.16", features = ["geo-types"] }
geo-types = "0.4.3"
lazy_static = "1"
prometheus = {version= "0.7", features = ["process"]}
heck = "0.3"
failure = "0.1"
num_cpus = "1"
cosmogony = "0.7"
actix = "0.9"
actix-web = "2"
actix-cors = "0.2"
actix-http = "1.0"
actix-service = "1.0"
serde_qs = "0.5"
futures = "0.1"
mimir = { path = "../mimir" }
toml = "0.5.6"
elasticsearch = "7.8.0-alpha.1"

[dev-dependencies]
reqwest = "=0.9.16"
docker_wrapper = { path = "../docker_wrapper" }
tools = { path = "../tools" }

[build-dependencies]
git-version = "0.2"
